# PointNetSegmentation

./: README.md  main.py  pyproject.toml
datasets/: __init__.py  airplane_dataset.py  shapenetparts.py
scripts/: eval_pointnet.py  eval_pointnet_2.py  train_pointnet.py  train_pointnet_2.py
segmentation_models/: __init__.py  _plots.py  pointnet.py  pointnet2.py  pointnet2_utils.py
training/: _training_utils.py  trainer.py
